--- a/searchbox1.html
+++ b/searchbox1.html
@@ -2,55 +2,55 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Search Box Form</title>
+  <title>Search Form</title>
   <style>
     body {
+      background-color: #f9f9f9;
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
     }
-    .form-box {
+    .form-container {
       background: white;
       padding: 30px;
-      border-radius: 8px;
+      border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       text-align: center;
       width: 300px;
     }
-    .form-box img {
+    .form-container img {
       width: 60px;
       margin-bottom: 20px;
     }
-    .form-box input[type="text"] {
+    .form-container input[type="text"] {
       width: 100%;
       padding: 10px;
       margin-bottom: 15px;
       border: 1px solid #ccc;
-      border-radius: 4px;
+      border-radius: 5px;
     }
-    .form-box button {
+    .form-container button {
       padding: 10px 20px;
-      background: #007bff;
+      background-color: #007bff;
       color: white;
       border: none;
-      border-radius: 4px;
+      border-radius: 5px;
       cursor: pointer;
     }
-    .form-box button:hover {
-      background: #0056b3;
+    .form-container button:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-  <div class="form-box">
+  <div class="form-container">
     <img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Logo_TV_2015.png" alt="Logo">
-    <form action="https://formsubmit.co/varshuvijayakumar@gmail.com@email.com" method="POST">
+    <form action="https://formsubmit.co/varshuvijayakumar@email.com" method="POST">
       <input type="text" name="search" placeholder="Enter your query..." required>
       <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="https://varshini145domain.github.io/thankyou.html">
+      <input type="hidden" name="_next" value="thankyou.html">
       <button type="submit">Search</button>
     </form>
   </div>
