--- a/searchbox1.html
+++ b/searchbox1.html
@@ -51,7 +51,7 @@
     
     <input type="hidden" name="_captcha" value="false">
     
-    <input type="hidden" name="_next" value="https://varshuvijayakumar.github.io/thankyou.html">
+    <input type="hidden" name="_next" value="https://github.com/varshini-vars/thankyou.html">
   </form>
 </body>
 </html>
